[gd_scene load_steps=15 format=3 uid="uid://dvebyw8glgp0n"]

[ext_resource type="Texture2D" uid="uid://ddxtigvpt5hlm" path="res://resources/images/characters/npc/enemies/placeholder_enemy/placeholder_enemy.png" id="1"]
[ext_resource type="Script" path="res://src/scripts/npc/enemies/enemy_base.gd" id="2"]

[sub_resource type="BoxShape3D" id="2"]

[sub_resource type="Animation" id="6"]
resource_name = "Enemy_Damage"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("EnemySprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 0, 0, 1), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="5"]
resource_name = "Enemy_Idle"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("EnemySprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("EnemySprite:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_jiyhe"]
_data = {
"Enemy_Damage": SubResource("6"),
"Enemy_Idle": SubResource("5")
}

[sub_resource type="AnimationNodeAnimation" id="7"]
animation = &"Enemy_Damage"

[sub_resource type="AnimationNodeAnimation" id="8"]
animation = &"Enemy_Idle"

[sub_resource type="AnimationNodeStateMachineTransition" id="9"]

[sub_resource type="AnimationNodeStateMachineTransition" id="10"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_msekq"]
advance_mode = 2

[sub_resource type="AnimationNodeStateMachine" id="3"]
states/End/position = Vector2(719, -17)
states/Enemy_Damage/node = SubResource("7")
states/Enemy_Damage/position = Vector2(382, 43)
states/Enemy_Idle/node = SubResource("8")
states/Enemy_Idle/position = Vector2(92, 43)
states/Start/position = Vector2(92, -36)
transitions = ["Enemy_Idle", "Enemy_Damage", SubResource("9"), "Enemy_Damage", "Enemy_Idle", SubResource("10"), "Start", "Enemy_Idle", SubResource("AnimationNodeStateMachineTransition_msekq")]
graph_offset = Vector2(-113, -77)

[sub_resource type="BoxShape3D" id="11"]

[sub_resource type="BoxShape3D" id="12"]

[node name="Enemy" type="CharacterBody3D"]
script = ExtResource("2")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(2, 0, 0, 0, 2, 0, 0, 0, 0.4, 0, 0, 0)
shape = SubResource("2")

[node name="EnemySprite" type="Sprite3D" parent="."]
transform = Transform3D(4, 0, 0, 0, 4, 0, 0, 0, 4, 0, 0, 0)
billboard = 1
texture_filter = 0
texture = ExtResource("1")

[node name="EnemyAnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_jiyhe")
}

[node name="EnemyAnimationTree" type="AnimationTree" parent="."]
libraries = {
"": SubResource("AnimationLibrary_jiyhe")
}
tree_root = SubResource("3")
anim_player = NodePath("../EnemyAnimationPlayer")

[node name="AreaEnemy" type="Area3D" parent="."]

[node name="CollisionShape3D" type="CollisionShape3D" parent="AreaEnemy"]
transform = Transform3D(3, 0, 0, 0, 3, 0, 0, 0, 0.2, 0, 0, 0)
shape = SubResource("11")

[node name="DetectDistance" type="Area3D" parent="."]

[node name="CollisionShape3D" type="CollisionShape3D" parent="DetectDistance"]
transform = Transform3D(10, 0, 0, 0, 6, 0, 0, 0, 2, 0, 0, 0)
shape = SubResource("12")

[connection signal="mouse_entered" from="." to="." method="_on_Enemy_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_Enemy_mouse_exited"]
[connection signal="area_entered" from="AreaEnemy" to="." method="_on_AreaEnemy_area_entered"]
[connection signal="body_entered" from="DetectDistance" to="." method="_on_DetectDistance_body_entered"]
[connection signal="body_exited" from="DetectDistance" to="." method="_on_DetectDistance_body_exited"]
